kubernetes/apps/pocketid/deployment.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.34.2-standalone-strict/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocketid-deployment
  labels:
    app.kubernetes.io/name: pocketid-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pocketid
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pocketid
    spec:
      containers:
        - name: pocketid
          image: ghcr.io/pocket-id/pocket-id:v2
          ports:
            - containerPort: 1411
              name: http
